# petits_c

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-38e72f7c24794f2e29a3.json  cmakeFiles-v1-27cc678eb3dfb7c9bbaf.json  codemodel-v2-723fca4eb8a9826cbea2.json  directory-acronym-b67fbd9d1fea5d1f337c.json  directory-deleter-e5573390e92b5cd79fd9.json  directory-empty_line_remover-6a29b90d82a5c79a692a.json  directory-identiques-6b2d9b7e10bf16bc5240.json  index-2024-09-17T07-43-54-0088.json  target-acronym-746e1a43e1efd90bd54b.json  target-deleter-344484d172b2225559ce.json  target-empty_line_remover-64612fbfdc291a81bd20.json  target-identiques-539ad9551f36ed338249.json  toolchains-v1-811ea44de306af42aa01.json
acronym/: CMakeLists.txt  Makefile  README.md  acronym  acronym.c  cmake_install.cmake  sentences
deleter/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  deleter  example.c  identiques  main.c
empty_line_remover/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c
identiques/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  identiques.c
